Fix infinite recursion in highlight processor

Highlight definitions might have a case with recursive context call.
Trivial example:

    <context name="foo" fallthroughContext="bar">
    <context name="bar" fallthroughContext="#pop">

This leads to infinite recursion call or infinite while loop in
Highlighter::highlightBlock. Some safety measures should
be implemented, like Kate does.

Implementation should detect recursion call and stop processing current
line. I.e. when iterateThroughRules() was already called with exactly
the same current context and progress->offset().

This patch implements recursion detection in ProgressData instance.

Task-number: QTCREATORBUG-21411
Change-Id: I4e1ba13ce40b7ba0f64ec655f8ce4b6e406ccf97
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: David Schulz <david.schulz@qt.io>